# glows-text2sql

./: README.md  pyproject.toml  setup.sh
src/: syn.py
